# task-movement

./: LICENSE  README.md
data/2nodes/: grid.txt
ilp/: stencil_energy_model.zpl
input-generator/: CMakeLists.txt  CartesianMeshConfig.h.in  cartesian_mesh.c
task-movement/: CMakeLists.txt  SchedulerConfig.h.in  basic_types.h  cost.cpp  cost.h  main.cpp  main.h  multigraph.h  processorgraph.cpp  processorgraph.h  read.h  schedparams.h  scheduling.h  taskgraph.cpp  taskgraph.h
task-movement/Koala/algorithm/: conflow.h  matching.h  matching.hpp  mis.h  mis.hpp  sat2cnf.h  schedule.h  schedule.hpp  search.h  search.hpp  weights.h  weights.hpp
task-movement/Koala/base/: defs.h  defs.hpp  exception.h  exception.hpp  rnd.h
task-movement/Koala/classes/: create.h  create.hpp  detect.h  detect.hpp
task-movement/Koala/coloring/: edge.h  edge.hpp  equitable.h  equitable.hpp  interval.h  interval.hpp  list.h  list.hpp  vertex.h  vertex.hpp
task-movement/Koala/container/: assoctab.h  assoctab.hpp  hashcont.h  hashcont.hpp  heap.h  heap.hpp  joinsets.h  joinsets.hpp  localarray.h  localarray.hpp  privates.hpp  set.h  set.hpp  set_hashset.h  set_hashset.hpp  set_set.hpp  set_vector.hpp  simple.h  simple.hpp
task-movement/Koala/examples/: g6.cpp
task-movement/Koala/graph/: adjmatrix.h  adjmatrix.hpp  edge.h  edge.hpp  graph.h  graph.hpp  grconst.h  grconst.hpp  vertex.h  view.h  view.hpp
task-movement/Koala/io/: g6.h  graphml.h  parsetgml.h  text.h  text.hpp
